Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4378

Periodic warning from TSContInternal::destroy()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 6.2.0
    • 6.2.0, 7.0.0
    • TS API
    • None

    Description

      Starting around April 16th, I'm seeing this in our logs on docs.trafficserver:

      [Apr 22 21:32:18.231] Server {0x2aceba630700} WARNING: <InkAPI.cc:961 (destroy)> INKCont not deletable 1 0x609000149630
      [Apr 22 21:33:18.229] Server {0x2aceba52f700} WARNING: <InkAPI.cc:961 (destroy)> INKCont not deletable 1 0x6090000bf300
      

      it happens almost exactly at 1 minute intervals (plus/minus a few ms .

      this is running with the 6.2.x release branch.

      Attachments

        Activity

          People

            shinrich Susan Hinrichs
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: