TS-4378:  Remove periodic warning.

(cherry picked from commit 13a20c199803aae734b634da425340c72cf10b26)